--- a/public/index.html
+++ b/public/index.html
@@ -22,6 +22,10 @@
       rel="stylesheet"
     />
     <link
+      href="https://fonts.googleapis.com/icon?family=Material+Icons"
+      rel="stylesheet"
+    />
+    <link
       href="https://fonts.googleapis.com/css2?family=Zen+Antique+Soft&display=swap"
       rel="stylesheet"
     />
